Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-22054

Warning about multiple declarations of let variables

    XMLWordPrintable

Details

    • 06d8df7ee6dff5d848336775d63ff90805a3c2ad

    Description

      Warning is shown if there are multiple let variables with the same name in different scopes. For example, this shown the warning:

      let foo = 1
      if (foo) {
        let foo = 2
      }
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            tjenssen Tim Jenssen
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes